--- a/package.json
+++ b/package.json
@@ -1,7 +1,20 @@
 {
-  "name": "sammy-libraries",
+  "name": "cra-template-sammy-libraries",
   "version": "0.1.0",
   "private": true,
+  "main": "template.json",
+  "keywords": [
+    "react",
+    "create-react-app",
+    "cra-template",
+    "template",
+    "react-router",
+    "react-router-dom",
+    "typescript",
+    "node-sass"
+  ],
+  "files": ["template", "template.json"],
+  "description": "Sammy Libraries is a CRA template made with node 16 and which includes, typescript, react-router, and node-sass",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -10,11 +23,14 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.1.8",
+    "node-sass": "6.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "sass-loader": "^12.1.0",
+    "typescript": "^4.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
