--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cra-template-sammy-libraries",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "main": "template.json",
   "keywords": [
     "react",
