--- a/package.json
+++ b/package.json
@@ -1,63 +1,66 @@
 {
-  "name": "cra-template-sammy-libraries",
-  "version": "0.1.1",
-  "private": false,
-  "main": "template.json",
-  "keywords": [
-    "react",
-    "create-react-app",
-    "cra-template",
-    "template",
-    "react-router",
-    "react-router-dom",
-    "typescript",
-    "node-sass"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/jackmaster110/cra-template-sammy-libraries.git"
-  },
-  "files": ["template", "template.json"],
-  "description": "Sammy Libraries is a CRA template made with node 16 and which includes, typescript, react-router, and node-sass",
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@types/react-router-dom": "^5.1.8",
-    "node-sass": "6.0.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
-    "sass-loader": "^12.1.0",
-    "typescript": "^4.1.2"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
+    "name": "cra-template-sammy-libraries",
+    "version": "0.2.1",
+    "private": false,
+    "main": "template.json",
+    "keywords": [
+        "react",
+        "create-react-app",
+        "cra-template",
+        "template",
+        "react-router",
+        "react-router-dom",
+        "typescript",
+        "node-sass"
     ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/jackmaster110/cra-template-sammy-libraries.git"
+    },
+    "files": [
+        "template",
+        "template.json"
+    ],
+    "description": "Sammy Libraries is a CRA template made with node 16 and which includes, typescript, react-router, and node-sass",
+    "dependencies": {
+        "@testing-library/jest-dom": "^5.11.4",
+        "@testing-library/react": "^11.1.0",
+        "@testing-library/user-event": "^12.1.10",
+        "@types/jest": "^26.0.15",
+        "@types/node": "^12.0.0",
+        "@types/react": "^17.0.0",
+        "@types/react-dom": "^17.0.0",
+        "@types/react-router-dom": "^5.1.8",
+        "node-sass": "6.0.0",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "react-router-dom": "^5.2.0",
+        "react-scripts": "4.0.3",
+        "sass-loader": "^12.1.0",
+        "typescript": "^4.1.2"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    }
 }
